[package]
name = "colonbuilder"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { "version" = "1", features = ["extra-traits"] }
quote = "1"
regex = "1.6"
once_cell= "1.13"
proc-macro2 = "1"
